Added skeletons for tracing memory accesses, allocation functions. Some initial work on reading debug metadata

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -5,4 +5,9 @@ add_subdirectory(Scalar)
 add_subdirectory(IPO)
 add_subdirectory(Vectorize)
 add_subdirectory(Hello)
+add_subdirectory(MemoryLogger)
+add_subdirectory(LoadStoreInstrument)
+add_subdirectory(FreeInstrument)
+add_subdirectory(DebugInstrument)
+add_subdirectory(DebugInfoPrint)
 add_subdirectory(ObjCARC)
