Added instrumentation for malloc, free, new, delete, new[], delete[]. Pass needs more testing

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory(MemoryLogger)
 add_subdirectory(LoadStoreInstrument)
 add_subdirectory(FreeInstrument)
 add_subdirectory(DebugInstrument)
+add_subdirectory(AllocFreeInstrument)
 add_subdirectory(DebugInfoPrint)
 add_subdirectory(ObjCARC)
