Instrumentation routines now in C. Added support for logging function entry and exit

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(FreeInstrument)
 add_subdirectory(DebugInstrument)
 add_subdirectory(AllocFreeInstrument)
 add_subdirectory(DebugInfoPrint)
+add_subdirectory(FInstrument)
 add_subdirectory(ObjCARC)
