Moved passes to single directory. Cleaned up code.

--- a/lib/Transforms/CMakeLists.txt
+++ b/lib/Transforms/CMakeLists.txt
@@ -12,4 +12,5 @@ add_subdirectory(DebugInstrument)
 add_subdirectory(AllocFreeInstrument)
 add_subdirectory(DebugInfoPrint)
 add_subdirectory(FInstrument)
+add_subdirectory(MemInstrument)
 add_subdirectory(ObjCARC)
