--- a/Debug/makefile
+++ b/Debug/makefile
@@ -41,19 +41,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: BugDetection
+all: firefox-racedetection
 
 # Tool invocations
-BugDetection: $(OBJS) $(USER_OBJS)
+firefox-racedetection: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	g++  -o "BugDetection" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "foxracer" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) BugDetection
+	-$(RM) $(OBJS)$(C++_DEPS)$(C_DEPS)$(CC_DEPS)$(CPP_DEPS)$(EXECUTABLES)$(CXX_DEPS)$(C_UPPER_DEPS) foxracer
 	-@echo ' '
 
 .PHONY: all clean dependents
