--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 ./test/*
+./Debug/foxracer
+./Debug/logging/Logging.o
+./Debug/main/main.o
+./Debug/parser/MultiStack.o
+./Debug/parser/TraceParser.o
+./Debug/racedetector/HBGraph.o
+./Debug/racedetector/UAFDetector.o
